# align-anything

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  2024-07-19-conv.json  Dockerfile  LICENSE  Model-Zoo.md  README.md  README_zh-CN.md  conda-recipe.yaml  few_shot.json  process.ipynb  pyproject.toml  run_job_4959365.err  run_job_4959367.err  run_job_4959511.err  run_job_4959519.err  run_job_4959525.err  run_job_4959533.err  run_job_4959580.err  run_job_4959653.err  run_job_4959692.err  run_job_4959984.err  run_job_4959991.err  run_job_4960038.err  run_job_4960084.err  run_job_4960089.err  setup.py  test.py
.github/: CONTRIBUTING.md  (+2 more)
projects/eval-anything/: .codespell-ignore-words.txt  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  development.md  pyproject.toml  setup.py
projects/eval-anything/eval_anything/: __main__.py  cli.py  version.py
projects/eval-anything/eval_anything/benchmarks/: __init__.py  benchmark.md
projects/eval-anything/eval_anything/benchmarks/cot_fewshot/: agieval.csv  mmlupro.json
projects/eval-anything/eval_anything/benchmarks/fewshot/: truthfulqa.json
projects/eval-anything/eval_anything/benchmarks/safedata/: BeaverTails-Evaluation.json  CDialBias.csv  DecodingTrust.jsonl  confaide.json  output.json  split_instructions.json  test.csv  test.jsonl
projects/eval-anything/eval_anything/benchmarks/text_audio_to_text/mmau/: configs.yaml  eval.py
projects/eval-anything/eval_anything/benchmarks/text_image_to_text/mathvision/: configs.yaml  eval.py
projects/eval-anything/eval_anything/benchmarks/text_image_to_text/mmmu/: configs.yaml  eval.py
projects/eval-anything/eval_anything/benchmarks/text_to_text/AGIEval/: configs.yaml  eval.py  tools.py
projects/eval-anything/eval_anything/benchmarks/text_to_text/ARC/: configs.yaml  eval.py
projects/eval-anything/eval_anything/benchmarks/text_to_text/AdvBench/: configs.yaml  eval.py  utils.py
projects/eval-anything/eval_anything/benchmarks/text_to_text/Anthropics/: configs.yaml  eval.py
projects/eval-anything/eval_anything/benchmarks/text_to_text/BBQ/: configs.yaml  eval.py  utils.py
projects/eval-anything/eval_anything/benchmarks/text_to_text/BeaverTails/: configs.yaml  eval.py
projects/eval-anything/eval_anything/benchmarks/text_to_text/CDialBias/: configs.yaml  eval.py  utils.py
projects/eval-anything/eval_anything/benchmarks/text_to_text/CEval/: configs.yaml  eval.py
projects/eval-anything/eval_anything/benchmarks/text_to_text/CMMLU/: configs.yaml  eval.py
projects/eval-anything/eval_anything/benchmarks/text_to_text/Cona/: configs.yaml  eval.py  utils.py
projects/eval-anything/eval_anything/benchmarks/text_to_text/Confaide/: configs.yaml  eval.py
projects/eval-anything/eval_anything/benchmarks/text_to_text/CyberAttackAssistance/: configs.yaml  eval.py  utils.py
projects/eval-anything/eval_anything/configs/: evaluate.yaml  evaluate_Confaide.yaml  evaluate_DecodingTrust.yaml  evaluate_DoNotAnswer.yaml  evaluate_FakeAlignment.yaml  evaluate_Flames.yaml  evaluate_HExPHI.yaml  evaluate_HarmBench.yaml  evaluate_HarmfulQ.yaml  evaluate_LatentJailbreak.yaml  evaluate_MaliciousInstruct.yaml  evaluate_MaliciousInstructions.yaml  evaluate_MoralBench.yaml  evaluate_RedEval.yaml  evaluate_XSafety.yaml  evaluate_aegis_aicontent_safety_dataset.yaml  evaluate_air_bench_2024.yaml  evaluate_deceptionbench.yaml  evaluate_gptfuzzer.yaml  evaluate_jade_db.yaml  evaluate_jbb_behaviors.yaml  evaluate_llm_jailbreak_study.yaml  evaluate_s_eval.yaml  evaluate_salad_bench.yaml
projects/eval-anything/eval_anything/dataloader/: base_dataloader.py  format_mm_dataset.py  mm_dataloader.py  t2t_dataloader.py  tv2act_dataloader.py
projects/eval-anything/eval_anything/eval-anything-local/data/: HarmfulQ.json  MaliciousInstructions.json  latent_jailbreak_data.json
projects/eval-anything/eval_anything/eval-anything-local/jade_db_data/: README.md
projects/eval-anything/eval_anything/evaluate_tools/: README.md  base_tools.py  cached_requests.py  metrics.py  t2t_tools.py
projects/eval-anything/eval_anything/license/: add_license.py  add_third_party.py
projects/eval-anything/eval_anything/models/: api_lm.py  base_model.py  hf_lm.py  hf_mm.py  hf_vla.py  vllm_lm.py  vllm_mm.py
projects/eval-anything/eval_anything/pipeline/: base_benchmark.py  base_task.py  mm_gen_benchmark.py  mm_und_benchmark.py  t2t_benchmark.py  tv2act_benchmark.py
projects/eval-anything/eval_anything/utils/: cache_manager.py  cached_requests.py  data_type.py  logger.py  mm_data_manager.py  prompt_builders.py  register.py  template.py  utils.py  uuid.py
projects/eval-anything/scripts/: download_dataset.py  download_objaverse_houses.py  run.sh  run_Confaide.sh  run_DecodingTrust.sh  run_DoNotAnswer.sh  run_Flames.sh  run_HExPHI.sh  run_HarmBench.sh  run_LatentJailbreak.sh  run_MoralBench.sh  run_RedEval.sh  run_XSafety.sh  run_deceptionbench.sh  run_jade_db.sh  run_vla.sh
(+1636 files in other folders)
